--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,58 @@
-    
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
+#principal {
+    width: 100%;
+    height: 100px;
+    background-color: #303030;
+    color: #FFF;
+    font-family: 'Inter';
+    font-size: 25px;
+    font-weight: 600;
+    line-height: normal;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px #bababa;
+}    
+
+    #principal a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+        #principal div a:hover {
+            color: #cccccc;
+        }
+
+    #menu { 
+        display: flex;
+        width: 45%;
+        justify-content: space-around;
+        margin-left: 5%;
+    }
+
+    #principal button {
+        margin-right: 5%;
+        background-color: #0C70F2;
+        box-shadow: 3px 2px 4px 0px rgba(11, 112, 244, 0.251);
+        border: 0px;
+        height: 39px;
+        width: 80px;
+        color: #FFF;
+        font-family: Inter;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        cursor: pointer;
+        border-radius: 10px;
+    }
+
+        #principal button:hover {
+            transform: translateY(-7px);
+            box-shadow: 3px 2px 10px rgba(108, 166, 242, 0.893);
+        }
+
