--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px #bababa;
+    border-bottom: 4px #bababa;
 }    
 
 
@@ -253,4 +253,57 @@ footer{
     footer .footer-line-inf a:first-child{
         padding-right: 5px;
         border-right: 3px solid white;
+    }
+
+    @media only screen and (max-width: 600px) {
+        #principal {
+            flex-direction: column;   
+            height: auto;        
+        }
+
+        #menu   {
+            flex-direction: column;
+            width: 100%;
+            
+        }
+
+        #menu a {
+            display: flex;
+            height: 50px;
+            align-items: center;
+        }
+
+        #principal button {
+            width: 100%;
+            margin: 0px;
+        }
+
+        section h1 {
+        
+            font-size: 38px;
+        }
+
+        section h2 {
+            font-size: 28px;
+            padding-right: 15px;
+            padding-left: 15px;
+        }
+
+        form {
+            width: 95%;
+            font-size: 20px;
+        }
+
+        .checkbox-itens {
+            font-size: 15px;
+        }
+
+        .footer-line-sup {
+            flex-direction: column;
+        }
+
+        footer .adress {
+            width: 95%;
+            margin-bottom: 25px;
+        }
     }
